# kube-controller-manager-rust

./: .gitignore  COMPARISON.md  Cargo.toml  README.md  VALIDATION.md
src/: config.rs  controller.rs  controller_context.rs  controller_descriptor.rs  controller_manager.rs  feature.rs  health.rs  leader_election.rs  lib.rs  main.rs
src/controllers/: mod.rs
tests/: compatibility.rs  integration_test.sh
