[package]
name = "kube-controller-manager-rust"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Kubernetes kube-controller-manager"
authors = ["kube-controller-manager-rust contributors"]
license = "Apache-2.0"
repository = "https://github.com/kubernetes/kubernetes"

[dependencies]
# Kubernetes client
kube = { version = "0.96", features = ["runtime", "client", "ws", "admission"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1.82"

# Configuration and CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
humantime = "2.1"

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
duration-str = "0.11"
backoff = "0.4"
tokio-util = "0.7"
rand = "0.8"
gethostname = "0.5"

# Leader election
[target.'cfg(unix)'.dependencies]
# For file-based leader election lock

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[[bin]]
name = "kube-controller-manager"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
